@@ -7,9 +7,10 @@
     <groupId>uk.ac.bristol.plrg</groupId>
     <artifactId>fluidPrompt</artifactId>
     <version>0.1</version>
+    <packaging>jar</packaging>
     <repositories>
         <repository>
-            <id>LLMPromptExecutor</id>
+            <id>github</id>
             <url>https://maven.pkg.github.com/cluelab/LLMPromptExecutor/</url>
         </repository>
     </repositories>
@@ -39,16 +40,42 @@
     <build>
         <plugins>
             <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>exec-maven-plugin</artifactId>
-                <version>3.5.0</version>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>3.11.0</version> <!-- O usa una versione aggiornata -->
                 <configuration>
-                    <mainClass>uk.ac.bristol.plrg.Main</mainClass>
-                    <arguments>
-                        <argument>argument1</argument>
-                    </arguments>
+                    <source>22</source> <!-- Specifica la versione del JDK (ad esempio 21) -->
+                    <target>22</target>
+                    <compilerArgs>
+                        <arg>--enable-preview</arg>
+                    </compilerArgs>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.7.0</version>
+                <configuration>
+                    <archive>
+                        <manifest>
+                            <mainClass>uk.ac.bristol.plrg.Main</mainClass> <!-- Classe principale -->
+                        </manifest>
+                    </archive>
+                    <descriptorRefs>
+                        <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>make-assembly</id>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>single</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
         </plugins>
     </build>
+
 </project>
